Fixed some fonts & wordwrap in "From the Comments"

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -357,7 +357,7 @@
 			padding:5px 0 0 10px;	
 		}
 		blockquote {
-			@include font-serif($size:1.1em, $lineHeight:25px);
+			@include font-serif($size:16px, $lineHeight:25px);
 			background:url("join-conversation-blockquote.png") no-repeat scroll 2% 50% transparent;		
 			border:0 none;
 			font-style:italic;
@@ -366,7 +366,7 @@
 			padding:0 25px 0 55px;
 		}
 		p.quotee {
-			@include font-sans-serif($size:0.85em);
+			@include font-sans-serif($size:12px);
 			color:$grayLight;
 			padding:5px 25px 10px 55px;
 			margin: 0;
@@ -467,7 +467,8 @@ h6.more-news-title {
 			}
 		}
 		div.related-content {
-			@include responsiveImageAsset($threeW);
+			@include responsiveImageAsset($threeW);			
+			
 			h6 {
 				font-size:0.90em;
 				padding:5px 0;
@@ -485,15 +486,16 @@ h6.more-news-title {
 				}
 			}
 			blockquote {
-				@include font-headline($weight:lighter);
-				@include font-shorthand($size: 1.5em, $lineHeight: 23px);
+				@include font-headline($weight: lighter);
+				@include font-shorthand($size: 16px, $lineHeight: 23px);
 				border:0 none;
 				font-style:italic;
 				margin:10px 0 5px 0;
 				padding:0;
+				word-wrap: break-word; // Big text, small area, best to force-break a word if necessary
 			}
 			.comments-quotee {
-				@include font-sans-serif($size:0.85em);
+				@include font-sans-serif($size: 12px);
 				background:url("more-news-quotee-icon.png") no-repeat 100px top;
 				color:$grayLight;
 				height:35px;
